Regression: Semi-transparent gap between node header and node content #115899

Closed
opened 2023-12-07 16:22:08 +01:00 by Ray Mairlot · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.17

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-06 00:37, hash: 27992034f2e6
Worked: -

Short description of error
There is a semi-transparent gap between the node header and the node 'content':

Node header gap.png

Exact steps for others to reproduce the error
Add any node to a node editor and place it on top of another node or node link.
In the attached file you can see the gap both in Geometry Nodes and the shader editor.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.17 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-06 00:37, hash: `27992034f2e6` Worked: - **Short description of error** There is a semi-transparent gap between the node header and the node 'content': ![Node header gap.png](/attachments/f18af0c1-0fc1-46c8-b663-bd2fdeacf00b) **Exact steps for others to reproduce the error** Add any node to a node editor and place it on top of another node or node link. In the attached file you can see the gap both in Geometry Nodes and the shader editor.
Ray Mairlot added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-07 16:22:09 +01:00
Member

Broke between good 3e75f70acd and bad 8d8ce64435

@pablovazquez : since you did

around the time of breaking, you might want to check?

Broke between good 3e75f70acd7d and bad 8d8ce6443530 @pablovazquez : since you did - 8d8ce6443530ac3e39276c7b7219e2a8ca61040f and - 4db4a97355672ee27542e45ac9959523567e0053 around the time of breaking, you might want to check?
Iliya Katushenock changed title from Semi-transparent gap between node header and node content to Regression: Semi-transparent gap between node header and node content 2023-12-08 12:31:12 +01:00
Iliya Katushenock added this to the 3.6 LTS milestone 2023-12-08 12:32:28 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-22 09:15:17 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115899
No description provided.