Fix #115899: Prevent transparent gaps on nodes

Add some padding to the different shapes used to draw nodes to
prevent transparent gaps between them.